--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-name: Awesome Research Group
-url: http://awesome.example.edu
+name: 4DSpace Research Group at UiO
+url: https://4dspace.github.io/4dspaceweb/
 
 exclude: [bibble, README.md, Makefile, screenshot.png]
 
