--- a/_data/people.yml
+++ b/_data/people.yml
@@ -2,7 +2,7 @@
 prof-miloch:
     display_name: "Prof. Wojciech J. Miloch"
     role: faculty
-    image: /img/people/photo_wojciech_miloch.jpeg
+    image: /img/people/photo_wojciech_miloch.png
     bio: Professor (Project Leader)
     webpage: "https://www.mn.uio.no/fysikk/english/people/aca/wojciecm/index.html"
 
