--- a/_config.yml
+++ b/_config.yml
@@ -15,8 +15,8 @@ permalink: /blog/:year/:month/:day/:title.html
 roles:
   - key: faculty
     name: Faculty
-  - key: staff
-    name: Staff
+  - key: engineer
+    name: Engineer
   - key: postdoc
     name: Researchers
   - key: grad
