--- a/_data/people.yml
+++ b/_data/people.yml
@@ -49,7 +49,7 @@ prof-Philipp:
 scott:
     display_name: "Bjørn Lybekk"
     webpage: "https://www.mn.uio.no/fysikk/english/people/adm/blybekk/index.html"
-    role: staff
+    role: engineer
     image: /img/people/blybekk.jpeg
     bio: Senior engineer
 
