--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -25,6 +25,8 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
+      - name: make
+        run: make
       - name: Checkout
         uses: actions/checkout@v3
       - name: Setup Pages
