--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -27,6 +27,12 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+      - name: Python set up
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.8
+      - name: Install bibble
+        run: pip install bibble
       - name: make
         run: make
       - name: Setup Pages
