people info update

--- a/_config.yml
+++ b/_config.yml
@@ -17,8 +17,8 @@ roles:
     name: Faculty
   - key: engineer
     name: Engineer
-  - key: postdoc
-    name: Postdocs
+  # - key: postdoc
+  #   name: Postdocs
   - key: researcher
     name: Researchers
   - key: phd
