people info update

--- a/_data/people.yml
+++ b/_data/people.yml
@@ -91,7 +91,7 @@ pascal:
     display_name: "Pascal Sado"
     webpage: "https://www.mn.uio.no/fysikk/english/people/aca/pascalsa/index.html"
     role: phd
-    image: /img/people/pascal.jpeg
+    image: /img/people/pascal.png
     bio: PhD
 
 
