--- a/_data/people.yml
+++ b/_data/people.yml
@@ -165,21 +165,22 @@ alum-b:
     bio: "Researcher (2022). Now at Institute for Energy Technology (IFE)"
 
 alum-c:
-    display_name: "Alum C"
+    display_name: "Toru Takahashi"
     role: alum
-    webpage: "https://www.google.com"
+    webpage: "https://www.researchgate.net/profile/Toru-Takahashi-13"
+    bio: "Researcher at National Institute of Maritime, Port and Aviation Technology, Japan"
 
-alum-d:
-    display_name: "Alum D"
-    role: alum
-
-alum-e:
-    display_name: "Alum E"
-    role: alum
-
-alum-f:
-    display_name: "Alum F"
-    role: alum
+# alum-d:
+#     display_name: "Alum D"
+#     role: alum
+#
+# alum-e:
+#     display_name: "Alum E"
+#     role: alum
+#
+# alum-f:
+#     display_name: "Alum F"
+#     role: alum
 #
 # alum-g:
 #     display_name: "Alum G"
@@ -194,16 +195,18 @@ alum-f:
 #     role: alum
 
 collab-a:
-    display_name: "Collaborator A"
+    display_name: "Yohei Miyake"
     role: collab
+    bio: Associate Professor, Kobe University Graduate School of System Informatics, Japan
 
 collab-b:
-    display_name: "Collaborator B With Long Name"
+    display_name: "Richard Marchand"
     role: collab
+    bio: Professor, Faculty of Science, University of Alberta, Canada
 
-collab-c:
-    display_name: "Collaborator C"
-    role: collab
+# collab-c:
+#     display_name: "Collaborator C"
+#     role: collab
 
 # collab-d:
 #     display_name: "Collaborator D"
@@ -213,21 +216,21 @@ collab-c:
 #     display_name: "Collaborator E"
 #     role: collab
 
-ugrad-a:
-    display_name: "Ugrad A"
-    role: ugrad
-
-ugrad-b:
-    display_name: "Ugrad Student B With Long Name"
-    role: ugrad
-
-ugrad-c:
-    display_name: "Ugrad C"
-    role: ugrad
-
-ugrad-d:
-    display_name: "Ugrad D"
-    role: ugrad
+# ugrad-a:
+#     display_name: "Ugrad A"
+#     role: ugrad
+#
+# ugrad-b:
+#     display_name: "Ugrad Student B With Long Name"
+#     role: ugrad
+#
+# ugrad-c:
+#     display_name: "Ugrad C"
+#     role: ugrad
+#
+# ugrad-d:
+#     display_name: "Ugrad D"
+#     role: ugrad
 #
 # ugrad-e:
 #     display_name: "Ugrad E"
