--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 name: 4DSpace Research Group at UiO
 title: 4DSpace Research Group
-url: https://4dspace.github.io/4dspaceweb/
+url: https://4dspace.github.io/4dspaceweb
 image: /img/cover.jpeg
 
 exclude: [bibble, README.md, Makefile, screenshot.png]
@@ -17,6 +17,8 @@ roles:
     name: Faculty
   - key: engineer
     name: Engineers
+  - key: emeritus
+    name: Professor Emeritus
   - key: postdoc
     name: Postdocs
   - key: researcher
