--- a/_config.yml
+++ b/_config.yml
@@ -38,7 +38,7 @@ roles:
 front_page_news: 8
 
 # Base pathname for links.
-base: '/4dspaceweb/'
+base: '/4dspaceweb'
 
 # make pages for the _projects folder
 collections:
