--- a/_data/people.yml
+++ b/_data/people.yml
@@ -13,7 +13,7 @@ prof-lasse:
     bio: Professor
     webpage: "https://www.mn.uio.no/fysikk/english/people/aca/lbnc/index.html"
 
-prof-Mikael:
+prof-mikael:
     display_name: "Prof. Mikael Mortensen"
     role: faculty
     image: /img/people/mikael.jpeg
@@ -28,7 +28,7 @@ prof-ketil:
     webpage: "https://www.mn.uio.no/fysikk/english/people/aca/ketilroe/index.html"
 
 
-prof-Philipp:
+prof-philipp:
     display_name: "Prof. Philipp Dominik Häfliger"
     role: faculty
     image: /img/people/hafliger.jpeg
