--- a/_config.yml
+++ b/_config.yml
@@ -56,7 +56,7 @@ navigation:
   - title: Research Facilities
     link: /facilities.html
   - title: Space Education
-    link: https://www.mn.uio.no/fysikk/english/research/projects/4dspace/education/
+    link: /education.html
   - title: Publications
     link: /publications.html
   # - title: Code
