--- a/bib/pubs.conf
+++ b/bib/pubs.conf
@@ -1,1 +1,17 @@
 
+@INPROCEEDINGS{...,  author = {...}, 
+title = {...}, 
+pages = {...}, 
+crossref = {proc disc 2009}, 
+doi = {...},}
+
+@inproceedings{lesk:1977,
+  title={Computer Typesetting of Technical Journals on {UNIX}},
+  author={Michael Lesk and Brian Kernighan},
+  booktitle={Proceedings of American Federation of
+             Information Processing Societies: 1977
+             National Computer Conference},
+  pages={879--888},
+  year={1977},
+  address={Dallas, Texas}
+}
