--- a/bib/pubs.conf
+++ b/bib/pubs.conf
@@ -1,12 +1,7 @@
 
-@INPROCEEDINGS{...,  author = {...}, 
-title = {...}, 
-pages = {...}, 
-crossref = {proc disc 2009}, 
-doi = {...},}
 
 @inproceedings{lesk:1977,
-  title={Computer Typesetting of Technical Journals on {UNIX}},
+  title={Ionospheric plasma structuring over Antarctica based on satellite and ground observations},
   author={Michael Lesk and Brian Kernighan},
   booktitle={Proceedings of American Federation of
              Information Processing Societies: 1977
