--- a/bib/pubs.conf
+++ b/bib/pubs.conf
@@ -2,11 +2,8 @@
 
 @inproceedings{lesk:1977,
   title={Ionospheric plasma structuring over Antarctica based on satellite and ground observations},
-  author={Michael Lesk and Brian Kernighan},
-  booktitle={Proceedings of American Federation of
-             Information Processing Societies: 1977
-             National Computer Conference},
-  pages={879--888},
-  year={1977},
-  address={Dallas, Texas}
+  author={Wojciech Jacek Miloch, Daria Kotova and Yaqi Jin},
+  booktitle={10th SCAR Open Science Conference and Brian Kernighan},
+},
+  year={2022},
 }
