--- a/_config.yml
+++ b/_config.yml
@@ -59,5 +59,7 @@ navigation:
     link: /education.html
   - title: Publications
     link: /publications.html
+  - title: News
+    link: /blog.html
   # - title: Code
   #   link: /code.html
