--- a/_data/people.yml
+++ b/_data/people.yml
@@ -162,7 +162,7 @@ gaute:
     display_name: "Gaute Arnesson Holen"
     webpage: 
     role: phd
-    # image: /img/people/Gaute_W19.png
+    # image: /img/people/gaute.jpg
     bio: Doctoral Research Fellow (PhD)
     
 # grad-a:
