--- a/_data/people.yml
+++ b/_data/people.yml
@@ -136,13 +136,6 @@ nicholas:
     image: /img/people/nicholas.png
     bio: Postdoc
 
-lisa:
-    display_name: "Lisa Marie Buschmann"
-    webpage: "https://www.mn.uio.no/fysikk/english/people/aca/lisambu/index.html"
-    role: phd
-    image: /img/people/lisa.png
-    bio: Doctoral Research Fellow (PhD)
-
 steffen:
     display_name: "Steffen Mattias Brask"
     webpage: "https://www.mn.uio.no/fysikk/english/people/aca/steffemb/index.html"
@@ -199,6 +192,12 @@ gaute:
 # grad-i:
 #     display_name: "Grad I"
 #     role: grad
+alum-lisa_m:
+    display_name: "Lisa Marie Buschmann"
+    role: alum
+    webpage: "https://no.linkedin.com/in/lisa-buschmann-670055246"
+    bio: "Ph.D. (2024). Now at the European Space Agency (ESA), Netherlands"
+
 alum-florine:
     display_name: "Florine Enengl"
     role: alum
