--- a/_data/people.yml
+++ b/_data/people.yml
@@ -225,7 +225,7 @@ alum-sigvald:
 alum-francesca:
     display_name: "Francesca di Mare"
     role: alum
-    webpage: 
+    webpage: "https://no.linkedin.com/in/francesca-di-mare"
     bio: "Postdoc (2022). "
 
 alum-anders:
